objects/ASI_CRM_Merchandiser_Task__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Promotion__r.ASI_HK_CRM_Promotion_End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <formula>TEXT( ASI_CRM_Promotion_Status__r.ASI_CRM_Customer__r.ASI_CRM_CN_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Account_Number__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Image__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Customer__r.ASI_TH_CRM_OutletImage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Name__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Type__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Customer__r.ASI_TH_CRM_OutletType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PDF__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ASI_CRM_TW_MerchanTaskReport_Page?scontrolCaching=1&amp;id=&quot;&amp; Id , &quot;打開陳列報告&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Date__c</fullName>
        <label>Photo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Code__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Promotion__r.Name</formula>
        <label>Promotion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Name__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Promotion__r.ASI_HK_CRM_Promotion_Name__c</formula>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Status</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Promotion_Status__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Promotion Status</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Promotion_Status__c</referenceTo>
        <relationshipLabel>Merchandiser Tasks</relationshipLabel>
        <relationshipName>Merchandiser_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Due_Date__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Promotion__r.ASI_CRM_PurchaseDueDate__c</formula>
        <label>Purchase Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Promotion__r.ASI_HK_CRM_Promotion_Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Supplier__r.Name</formula>
        <label>Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Task__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display Setup</fullName>
                </value>
                <value>
                    <fullName>POSM</fullName>
                </value>
                <value>
                    <fullName>Display Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit__c</fullName>
        <formula>ASI_CRM_Promotion_Status__r.ASI_CRM_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visitation_Plan_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipLabel>Merchandiser Tasks</relationshipLabel>
        <relationshipName>Merchandiser_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Merchandiser Task</label>
    <listViews>
        <fullName>ASI_CRM_TW_MerchandiserTasks</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion_Code__c</columns>
        <columns>ASI_CRM_Visitation_Plan_Detail__c</columns>
        <columns>ASI_CRM_Promotion_Status__c</columns>
        <columns>ASI_CRM_Done__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ASI_CRM_Outlet_Name__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Merchandiser_Task__c.ASI_CRM_TW_Merchandiser_Task</value>
        </filters>
        <label>TW Merchandiser Tasks</label>
        <language>zh_TW</language>
    </listViews>
    <nameField>
        <displayFormat>MT-{YY}{MM}{DD}{0000}</displayFormat>
        <label>Merchandiser Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandiser Tasks</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Merchandiser_Task</fullName>
        <active>true</active>
        <label>TW Merchandiser Task</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>